<resources>
    <string name="app_name">Football Competition Manager</string>
    <string name="friendly_match">Mecz towarzyski</string>
    <string name="versus">vs</string>
    <string name="score_format">%d:%d</string>
    <string name="date_format">dd.MM.yyyy</string>
    <string name="time_format">HH:mm</string>
    <string name="date_time_format">dd.MM.yyyy HH:mm</string>
    <string name="minutes">%d minut</string>
    <string name="number_of_players_per_team">%d vs %d</string>
    <string name="server_exception_message">Wystąpił błąd podczas połączenia z serwerem. Spróbuj ponownie</string>
    <string name="fragment_change_data_toolbar_title">Zmiana danych</string>
    <string name="fragment_change_data_email_address_text_field_hint">Adres e-mail</string>
    <string name="fragment_change_data_new_password_text_field_hint">Nowe hasło</string>
    <string name="fragment_change_data_new_password_confirm_text_field_hint">Potwierdź nowe hasło</string>
    <string name="fragment_change_data_password_confirm_text_field_hint">Potwierdź hasłem</string>
    <string name="fragment_change_data_change_button_label">Zapisz zmiany</string>
    <string name="fragment_change_data_email_not_valid">Wprowadź poprawny adres e-mail</string>
    <string name="fragment_change_data_email_not_unique">Ten adres e-mail już znajduje się w systemie</string>
    <string name="competition_status_planning_label">W trakcie planowania</string>
    <string name="competition_status_in_progress_label">Trwające</string>
    <string name="competition_status_completed_label">Zakończone</string>
    <string name="fragment_home_top_menu_search_title">Szukaj</string>
    <string name="fragment_home_top_menu_settings_title">Ustawienia</string>
    <string name="fragment_home_top_menu_user_account_title">Konto użytkownika</string>
    <string name="fragment_home_top_menu_report_bug_title">Zgłoś błąd</string>
    <string name="fragment_home_top_menu_report_list_title">Lista zgłoszeń</string>
    <string name="fragment_home_top_menu_logout_title">Wyloguj</string>
    <string name="fragment_home_fab_add_team_label">Dodaj drużynę</string>
    <string name="fragment_home_fab_add_competition_label">Dodaj rozgrywki</string>
    <string name="fragment_home_no_matches_info">Brak nadchodzących meczów Twoich drużyn.</string>
    <string name="fragment_home_no_teams_info">Nie jesteś właścicielem ani zawodnikiem żadnej drużyny. Stwórz drużynę albo dołącz do istniejącej poprzez wyszukanie jej po nazwie.</string>
    <string name="fragment_home_no_competitions_info">Nie jesteś właścicielem rozgrywek ani Twoje drużyny nie biorą udziału w żadnych rozgrywkach.</string>
    <string name="fragment_home_bottom_nav_matches_title">Mecze</string>
    <string name="fragment_home_bottom_nav_teams_title">Drużyny</string>
    <string name="fragment_home_bottom_nav_competitions_title">Rozgrywki</string>
    <string name="fragment_home_match_deleted_snackbar_message">Mecz został usunięty</string>
    <string name="fragment_home_team_deleted_snackbar_message">Drużyna została usunięta</string>
    <string name="fragment_home_competition_deleted_snackbar_message">Rozgrywki zostały usunięte</string>
    <string name="fragment_league_create_top_bar_title">Nowa liga</string>
    <string name="fragment_league_create_league_name_label">Nazwa ligi</string>
    <string name="fragment_league_create_number_of_teams_label">Liczba drużyn</string>
    <string name="fragment_league_create_double_matches_label">Podwójne mecze</string>
    <string name="fragment_league_create_match_length_label">Długość meczu (w minutach)</string>
    <string name="fragment_league_create_players_per_team_label">Liczba zawodników jednej drużyny na boisku</string>
    <string name="fragment_league_create_league_description_label">Opis ligi</string>
    <string name="fragment_league_create_create_button_label">Stwórz ligę</string>
    <string name="fragment_league_create_empty_name">Nazwa nie może być pusta</string>
    <string name="fragment_league_create_name_length_not_valid">Nazwa rozgrywek musi zawierać od 8 do 50 znaków</string>
    <string name="fragment_league_create_empty_match_length">Podaj długość meczu</string>
    <string name="fragment_league_create_match_length_not_greater_than_zero">Długość meczu musi być dłuższa od zera</string>
    <string name="fragment_league_create_description_too_long">Opis rozgrywek jest zbyt długi</string>
    <string name="fragment_league_create_unique_name_error">Rozgrywki o takiej nazwie już istnieją</string>
    <string name="fragment_league_detail_menu_update_data_label">Zmień dane</string>
    <string name="fragment_league_detail_menu_delete_league_label">Usuń ligę</string>
    <string name="fragment_league_detail_request_sent_successful_message">Wysłano prośbę o dołączenie Twojej drużyny do ligi</string>
    <string name="fragment_league_detail_request_cancel_successful_message">Anulowano prośbę o dołączenie Twojej drużyny do ligi</string>
    <string name="fragment_league_detail_leave_competition_dialog">Czy na pewno chcesz usunąć swoją drużynę z rozgrywek?</string>
    <string name="fragment_league_detail_competition_left_message">Usunięto Twoją drużynę z rozgrywek</string>
    <string name="fragment_league_detail_menu_delete_dialog_message">Czy na pewno chcesz usunąć tę ligę? Zostaną usunięte wszystkie wyniki.</string>
    <string name="fragment_league_detail_start_competition_button_label">Rozpocznij rozgrywki</string>
    <string name="fragment_league_detail_competition_started_snackbar_message">Rozgrywki zostały rozpoczęte</string>
    <string name="fragment_league_detail_finish_competition_button_label">Zakończ rozgrywki</string>
    <string name="fragment_league_detail_competition_finished_snackbar_message">Rozgrywki zostały zakończone</string>
    <string name="fragment_league_detail_table_tab_label">Zasady i tabela</string>
    <string name="fragment_league_detail_matches_tab_label">Mecze</string>
    <string name="fragment_league_detail_results_tab_label">Wyniki</string>
    <string name="fragment_league_detail_teams_tab_label">Drużyny</string>
    <string name="fragment_league_detail_requests_tab_label">Zgłoszenia</string>
    <string name="fragment_league_detail_table_header_position">#</string>
    <string name="fragment_league_detail_table_header_team_name">Nazwa drużyny</string>
    <string name="fragment_league_detail_table_header_played_matches">M</string>
    <string name="fragment_league_detail_table_header_wins">W</string>
    <string name="fragment_league_detail_table_header_draws">R</string>
    <string name="fragment_league_detail_table_header_loses">P</string>
    <string name="fragment_league_detail_table_header_goals">B</string>
    <string name="fragment_league_detail_table_header_points">Pkt.</string>
    <string name="fragment_league_detail_table_legend_label">Legenda:</string>
    <string name="fragment_league_detail_table_legend">M - rozegrane mecze\nW - wygrane\nR - remisy\nP - porażki\nB - bramki (bramki zdobyte:bramki stracone)\nPkt. - liczba punktów</string>
    <string name="fragment_league_detail_no_matches_info">Brak nadchodzących meczów</string>
    <string name="fragment_league_detail_plan_match_button_label">Zaplanuj mecz</string>
    <string name="fragment_league_detail_no_results_info">Nie rozegrano żadnych meczów w ramach tej ligi</string>
    <string name="fragment_league_detail_no_teams_info">Nie ma jeszcze żadnych drużyn w lidze</string>
    <string name="fragment_league_detail_no_requests_info">Brak próśb o dołączenie do ligi</string>
    <string name="fragment_league_detail_competition_team_item_view_owner_info">Jesteś właścicielem tej drużyny</string>
    <string name="fragment_league_detail_remove_team_button_label">Usuń</string>
    <string name="fragment_league_detail_remove_team_dialog_message">Czy na pewno chcesz usunąć drużynę z ligi?</string>
    <string name="fragment_league_detail_team_removed_message">Drużyna została usunięta z ligi</string>
    <string name="fragment_league_detail_request_accept_button_text">Dodaj</string>
    <string name="fragment_league_detail_request_reject_button_text">Odrzuć</string>
    <string name="fragment_league_detail_request_accept_successful_message">Nowa drużyna została dodana do ligi</string>
    <string name="fragment_league_detail_request_reject_successful_message">Odrzucono prośbę o dołączenie do ligi</string>
    <string name="fragment_league_detail_league_updated_snackbar_message">Zaktualizowano dane ligi</string>
    <string name="fragment_league_update_top_bar_title">Zmiana danych ligi</string>
    <string name="fragment_league_update_league_name_label">Nazwa ligi</string>
    <string name="fragment_league_update_number_of_teams_label">Liczba drużyn</string>
    <string name="fragment_league_update_double_matches_label">Podwójne mecze</string>
    <string name="fragment_league_update_match_length_label">Długość meczu (w minutach)</string>
    <string name="fragment_league_update_players_per_team_label">Liczba zawodników jednej drużyny na boisku</string>
    <string name="fragment_league_update_league_description_label">Opis ligi</string>
    <string name="fragment_league_update_button_label">Zmień dane</string>
    <string name="fragment_league_update_invalid_number_of_teams_message">Ustawiono zbyt małą liczbę drużyn. Aktualnie w lidze znajduje się drużyn</string>
    <string name="fragment_login_username_label">Nazwa użytkownika</string>
    <string name="fragment_login_password_label">Hasło</string>
    <string name="fragment_login_login_button_text">Zaloguj</string>
    <string name="fragment_login_register_button_text">Załóż konto</string>
    <string name="fragment_login_empty_field_message">Pole nie może być puste</string>
    <string name="fragment_login_login_error_message">Logowanie nie powiodło się. Błędna nazwa użytkownika lub hasło</string>
    <string name="fragment_login_login_timeout_error_message">Serwer jest wyłączony. Spróbuj ponownie </string>
    <string name="fragment_login_login_unknown_error_message">Nieznany błąd podczas logowania. Spróbuj ponownie później</string>
    <string name="match_adapter_home_team_owner_proposed">Mecz zaproponowany przez właściciela drużyny domowej</string>
    <string name="match_adapter_away_team_owner_proposed">Mecz zaproponowany przez właściciela drużyny wyjazdowej</string>
    <string name="match_adapter_match_waiting_for_score">Mecz oczekuje na ustalenie wyniku</string>
    <string name="fragment_match_create_empty_date_time_button_label">--.--.---- --:--</string>
    <string name="fragment_match_create_match_date_time_label">Data i godzina meczu</string>
    <string name="fragment_register_email_address_label">Adres e-mail</string>
    <string name="fragment_register_username_label">@string/fragment_login_username_label</string>
    <string name="fragment_register_password_label">@string/fragment_login_password_label</string>
    <string name="fragment_register_confirm_password_label">Potwierdź hasło</string>
    <string name="fragment_register_register_button_text">Zarejestruj</string>
    <string name="fragment_team_detail_matches_tab_label">Mecze</string>
    <string name="fragment_team_detail_results_tab_label">Wyniki</string>
    <string name="fragment_team_detail_competitions_tab_label">Rozgrywki</string>
    <string name="fragment_team_detail_players_tab_label">Zawodnicy</string>
    <string name="fragment_team_detail_requests_tab_label">Zgłoszenia</string>
    <string name="fragment_team_detail_no_matches_info">Brak nadchodzących meczów</string>
    <string name="fragment_team_detail_plan_friendly_button_label">Zaproponuj mecz towarzyski</string>
    <string name="fragment_team_update_top_bar_title">Zmiana danych drużyny</string>
    <string name="fragment_team_update_team_name_label">Nazwa drużyny</string>
    <string name="fragment_team_update_description_label">Opis</string>
    <string name="fragment_team_update_button_label">Zmień dane</string>
</resources>